--- a/src/styles/settings/colors.css
+++ b/src/styles/settings/colors.css
@@ -1,5 +1,5 @@
 :root{
     --color-alura: #051932;
     --color-pomb-and-power: #7C5E99;
-    --color-flora-white: #FFFCEE;
+    --color-floral-white: #FFFCEE;
 }
